Fix slide photos visibility

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -69,3 +69,6 @@ blockquote{
 .text-white{
     color: #fff;
 }
+.carousel .carousel-item {
+    visibility:visible;
+}
